# kafka-pg-upload

./: .travis.yml  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
kafka_pg_upload/: __init__.py  cmd.py  config.py  kafka_consumer.py  logger.py  pg_producer.py
tests/: conftest.py  test_integration.py  test_kafka_pg_upload.py  test_unit.py
